--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Valentine</title>
+    <title>To My Love</title>
   </head>
   <body>
+    <nav class="navbar">
+      <h1>To My Love ❤️</h1>
+    </nav>
     <main class="container">
       <img class="cat-img" src="img/cat-0.jpg" alt="Picture of a cat" />
       <p class="title">Will you be my Valentine?</p>
@@ -21,10 +24,9 @@
         <button type="button" class="btn btn--no">No</button>
       </div>
     </main>
-    <audio id="music1" src="WhatsApp Audio 2024-10-08 at 12.25.27 PM.mpeg" autoplay></audio>
-    <audio id="music2" src="no [TubeRipper.com].mp3" autoplay></audio>
+    <audio id="music1" src="WhatsApp Audio 2024-10-08 at 12.25.27 PM.mpeg"></audio>
+    <audio id="music2" src="no [TubeRipper.com].mp3"></audio>
 
     <script type="module" src="script.js"></script>
-    
   </body>
 </html>
